# anno-ai-avatar

./: .gitattributes  .gitignore  CLA.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-python-and-poetry/: action.yml
.github/workflows/: actionlint.yml  lint.yml  qa-eval.yml
aituber_3d/: UpgradeLog.htm
aituber_3d/Assets/: MainMixer.mixer  SE.mixer
aituber_3d/Assets/Editor/: TextureImporterSettings.cs
aituber_3d/Assets/Font/: MPLUS1p-Regular SDF.asset
aituber_3d/Assets/Materials/: GradientMaterial.mat
aituber_3d/Assets/Motion/: AnimationsController.controller  Jump.anim  conversation.anim  falling.anim  handshake.anim  idle1.anim  idle2.anim  waving.anim
aituber_3d/Assets/Prefabs/: CommentPanel.prefab  CommentText.prefab  NewCommentIndicator.prefab  QueueItem.prefab
aituber_3d/Assets/Presidential podiums collection/: New Terrain.asset  Readme.txt
aituber_3d/Assets/Presidential podiums collection/Models/: Chinese flag.fbx  Curtains.fbx  EU Flag.fbx  French flag.fbx  German flag.fbx  Japanese flag.fbx  Presidential Chinese podium.fbx  Presidential French podium.fbx  Presidential German podium.fbx  Presidential Japanese podium.fbx  Presidential Russian podium.fbx  Presidential Spanish podium.fbx  Presidential UK podium.fbx  Presidential USA Podium.fbx  (+11 more)
aituber_3d/Assets/Resources/: DOTweenSettings.asset
aituber_3d/Assets/Scenes/: SampleScene 1.unity  SampleScene 2.unity  SampleScene 3.unity  SampleScene 4.unity  SampleScene 5.unity  SampleScene.unity  ShortMovieScene.unity
aituber_3d/Assets/Shaders/: GradientShader.shader
aituber_3d/Assets/VRM/: avatar_anno04.prefab  avatar_anno04.vrm  avator_anno.vrm  avator_anno02.vrm  avator_anno02_tasuki_test5.vrm  avator_anno03.vrm  sample_mdk2.vrm
aituber_3d/ProjectSettings/: ProjectSettings.asset
phonecall/: .env.sample  Dockerfile  README.md  custom_chatgpt_agent.py  docker-compose.yml  main.py  pyproject.toml  volume_adjustable_eleven_labs_synthesizer.py
python_server/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  entry.sh  pyproject.toml  pytest.ini
python_server/Text/: NG.csv  OtherCandidates.txt  output_other_candidates.txt  raw_other_candidates.txt  template_messages.txt  template_questions.txt  政策　全体ストーリー（随時更新）.txt
python_server/alembic/: env.py  script.py.mako
python_server/alembic/versions/: 20240621_001449_ff74e4d598f6_.py  20240621_005221_935a522dc2e9_.py  20240621_131235_188d5b9df211_.py
python_server/comment_proxy/: index.html  index.js
python_server/docker/postgres/docker-entrypoint-initdb.d/: 0001_createdb.sql
python_server/faiss_knowledge/: all_slides_summary.csv  auto_generated.csv  manifesto_demo_slides.csv  manifesto_slides.csv  slides_summary.csv  wiki_artificial_intelligence.csv  wiki_artificial_intelligence.txt
python_server/faiss_qa/: sample_tsukuyomi.csv
python_server/qa_datasets/: README.md  ブロードリスニング用想定FAQ_ver0.1 - faq.csv
python_server/src/: azure_speech_synthesizer.py  config.py  get_faiss_vector.py  google_drive.py  gpt.py  logger.py  templates.py  text_to_speech.py  youtube.py
python_server/src/cli/: build_resources.sh  fetch_youtube_chat_messages.py  import_docs_csv.py  import_pdf.py  import_pdf_csv.py  save_faiss_db.py  save_faiss_knowledge_db.py  upload_logs_to_google_drive.py
python_server/src/cli/databases/: create.py  drop.py  utils.py
python_server/src/cli/loaders/: qa_dataset.py
python_server/src/cli/rag_evaluation/: evaluate.py  input_example.csv
python_server/src/cli/wrap/: sync.py
python_server/src/databases/: engine.py
python_server/src/databases/models/: __init__.py  youtube_chat_message_cursors.py  youtube_chat_messages.py
python_server/src/databases/models/utils/: default_func.py
python_server/src/repository/: chat_message.py  chat_message_cursor.py
python_server/src/schema/: hallucination.py  text_to_speech.py
python_server/src/streamlit/: api_client.py  auth.py  auth.yml  main.py  utils.py
python_server/src/streamlit/pages/: 1_音声合成.py  2_音声対話.py  3_テキスト対話.py  4_エンベッティング.py  5_ハルシネーションチェック.py
python_server/src/use_cases/: find_youtube_chat_messages.py  save_youtube_chat_message.py
python_server/src/web/: api.py
python_server/src/web/schema/response_model/: youtube.py
python_server/tests/: gpt_test.py
(+256 files in other folders)
